# Ara-notification-service

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  ROADMAP.md  USAGE.md
docs/en/: 01-architecture.md  02-installation.md  03-api-reference.md  04-development-guide.md  05-advanced-features.md  06-observability.md  README.md
docs/zh-TW/: 01-architecture.md  02-installation.md  03-api-reference.md  04-development-guide.md  05-advanced-features.md  06-observability.md  07-single-node-commercial-secure.md  README.md
migrations/: 001_create_message_queue.sql  002_create_pending_acks.sql  003_create_ack_stats.sql
src/: lib.rs  main.rs
src/api/: cluster.rs  connection.rs  handlers.rs  health.rs  metrics.rs  mod.rs  routes.rs  template.rs  tenant.rs
src/auth/: claims.rs  jwt.rs  mod.rs
src/cluster/: local.rs  mod.rs  redis_store.rs  session_store.rs
src/config/: mod.rs  settings.rs
src/connection_manager/: manager.rs  mod.rs  registry.rs
src/domain/: mod.rs
src/domain/ack/: ack.rs  ack_backend.rs  ack_memory_backend.rs  ack_postgres_backend.rs  ack_redis_backend.rs  mod.rs
src/domain/cluster/: factory.rs  redis_store.rs  router.rs  traits.rs  types.rs
src/domain/connection/: stats.rs  types.rs
src/domain/notification/: dispatcher.rs  mod.rs  types.rs
src/domain/queue/: factory.rs  memory_backend.rs  postgres_backend.rs  redis_backend.rs  user_queue.rs
src/domain/ratelimit/: limiter.rs  mod.rs
src/domain/realtime/: mod.rs
src/domain/template/: types.rs
src/domain/tenant/: mod.rs
src/error/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: claims.rs  jwt.rs  mod.rs
src/infrastructure/config/: settings.rs
src/infrastructure/error/: mod.rs
src/infrastructure/metrics/: mod.rs
src/infrastructure/postgres/: mod.rs
src/metrics/: helpers.rs  mod.rs
src/notification/: ack.rs  ack_backend.rs  ack_postgres_backend.rs  ack_redis_backend.rs  dispatcher.rs  mod.rs
src/postgres/: pool.rs
src/queue/: backend.rs  mod.rs  models.rs  postgres_backend.rs
src/ratelimit/: config.rs  distributed.rs  mod.rs  token_bucket.rs
src/redis/: backoff.rs  circuit_breaker.rs  mod.rs  pool.rs
src/server/: app.rs  middleware.rs  mod.rs  state.rs
src/shutdown/: mod.rs
src/sse/: handler.rs  mod.rs
src/tasks/: heartbeat.rs  mod.rs
src/telemetry/: mod.rs
src/template/: mod.rs  store.rs  substitution.rs  types.rs
src/triggers/: http.rs  mod.rs  redis.rs
src/triggers/http/: batch.rs  (+1 more)
src/websocket/: handler.rs  message.rs  mod.rs
tests/: cluster_integration.rs  components_integration.rs
tests/load/: README.md  batch-api.js  config.js  e2e-load.js  http-api.js  run-tests.bat  run-tests.sh  websocket.js
(+15 files in other folders)
