[package]
name = "ara-notification-service"
version = "0.1.0"
edition = "2021"
authors = ["Ara Team"]
description = "Real-time notification service with WebSocket support"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "9"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Concurrent data structures
dashmap = "6"

# Async utilities
futures = "0.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
